kubernets-deployment/consumer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
spec:
  replicas: 1  # Initial number of replicas, HPA will scale this
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: vivekguptalandmarkgroupin/kafka:consumer-image-latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
spec:
  selector:
    app: consumer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
