kubernets-deployment/producer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: vivekguptalandmarkgroupin/kafka:producer-image-latest
          ports:
            - containerPort: 9991
---
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
    app: producer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9991
  type: ClusterIP
